--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
 
 volumes:
   db_obd:
