--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   db:
-    image: postgres:10
+    image: postgres:11-alpine
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
