IOBD-154 Implement the heartbeat mechanism (rejected)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,6 @@ logging.level.com.isyb.obd=INFO
 spring.output.ansi.enabled=ALWAYS
 #ssh -L 5432:localhost:5432 vadym@192.168.85.245
 # for "hot reload" or "live reload"
-spring.devtools.restart.enabled=true
+spring.devtools.restart.enabled=false
 spring.devtools.restart.poll-interval=1000
+http.client.connection.timeout=10
