IOBD-170 Implement heartbeat mechanism 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 server.tomcat.max-connections=1000
-spring.datasource.url=jdbc:postgresql://localhost:5432/obd
+spring.datasource.url=jdbc:postgresql://db:5432/obd
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.jpa.generate-ddl=true
