--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,21 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-#  app:
-#    build: .
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - db
+    restart: always
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8080/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    restart: always
+
 
 volumes:
   db_obd:
-
