IOBD-175 Begin migrate to webflux, create notify endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 server.tomcat.max-connections=1000
-spring.datasource.url=jdbc:postgresql://db:5432/obd
+spring.datasource.url=jdbc:postgresql://localhost:5432/obd
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.jpa.generate-ddl=true
@@ -10,7 +10,7 @@ spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=true
 spring.datasource.hikari.maximum-pool-size=10
 #Logging
-logging.level.root=ERROR
+logging.level.root=INFO
 #logging.file.name=src/main/resources/logs/root.log
 logging.file.name=logs/root.log
 logging.logback.rollingpolicy.max-file-size=50MB
