--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.output.ansi.enabled=ALWAYS
 spring.devtools.restart.enabled=false
 spring.devtools.restart.poll-interval=1000
 http.client.connection.timeout=10
+#
+spring.r2dbc.username=root
+spring.r2dbc.password=root
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/obd
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.initial-size=10
+spring.r2dbc.pool.max-idle-time=1m
+spring.r2dbc.pool.max-size=30
+spring.data.r2dbc.repositories.enabled=true
