--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 server.tomcat.max-connections=1000
-spring.datasource.url=jdbc:postgresql://localhost:5432/obd
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/obd
+#spring.datasource.username=root
+#spring.datasource.password=root
 #spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=none
 spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=true
-spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.maximum-pool-size=10
 #Logging
 logging.level.root=INFO
 #logging.file.name=src/main/resources/logs/root.log
