--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,26 +12,26 @@ services:
       - "5432:5432"
     volumes:
       - db_obd:/var/lib/postgresql/data
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U root -P root -d obd" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U root -P root -d obd" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 10s
     restart: always
-  app:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-    healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8080/health || exit 1" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
-    restart: always
+#  app:
+#    build: .
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - db
+#    healthcheck:
+#      test: [ "CMD-SHELL", "curl -f http://localhost:8080/health || exit 1" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 10s
+#    restart: always
 
 
 volumes:
