--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-server.port=8080
-server.tomcat.max-connections=1000
+server.port=8081
+#server.tomcat.max-connections=1000
 #spring.datasource.url=jdbc:postgresql://localhost:5432/obd
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=none
-spring.flyway.baselineOnMigrate=true
-spring.flyway.enabled=true
 #spring.datasource.hikari.maximum-pool-size=10
 #Logging
 logging.level.root=INFO
@@ -35,3 +33,8 @@ spring.r2dbc.pool.initial-size=10
 spring.r2dbc.pool.max-idle-time=1m
 spring.r2dbc.pool.max-size=30
 spring.data.r2dbc.repositories.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/obd
+spring.flyway.user=${spring.r2dbc.username}
+spring.flyway.password=${spring.r2dbc.password}
+spring.flyway.baselineOnMigrate=true
+spring.flyway.enabled=true
