OS-34 Processing notify from OBD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.root=INFO
 logging.file.name=logs/root.log
 logging.logback.rollingpolicy.max-file-size=50MB
 logging.logback.rollingpolicy.max-history=5
-logging.level.com.isyb.obd=INFO
+logging.level.com.isyb.obd=DEBUG
 #logging.file.path.obd=logs
 #logging.file.name.obd=obd.log
 #logging.file.max-size.obd=50MB
